force-app/main/default/objects/OrderItem/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <formula>SBQQ__QuoteLine__r.Customer_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>