force-app/main/default/objects/OrderItem/fields/NAV_Type__c.field-meta.xml
<CustomField>
    <fullName>NAV_Type__c</fullName>
    <formula>TEXT (SBQQ__QuoteLine__r.SBQQ__Product__r.NAV_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAV Type</label>
    <type>Text</type>
</CustomField>