force-app/main/default/objects/OrderItem/fields/Navision_Prod_No__c.field-meta.xml
<CustomField>
    <fullName>Navision_Prod_No__c</fullName>
    <description>NAV Invoice Integration - 2020/01/09</description>
    <formula>TEXT ( 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navision Prod No</label>
    <type>Text</type>
</CustomField>