force-app/main/default/objects/OrderItem/fields/Renewed_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subscription__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__RenewedSubscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Information pulled from Primary Quote - Quote Line object</inlineHelpText>
    <label>Renewed Subscription</label>
    <type>Text</type>
</CustomField>