force-app/main/default/objects/OrderItem/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <formula>Text ( SBQQ__QuoteLine__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Type</label>
    <type>Text</type>
</CustomField>