force-app/main/default/objects/OrderItem/fields/Subscription_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Length_Months__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__SubscriptionTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Length (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>