force-app/main/default/objects/OrderItem/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description>NAV Integration (?)</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__TotalDiscountRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>