force-app/main/default/objects/OrderItem/fields/Total_Discount_incl_Partner__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_incl_Partner__c</fullName>
    <description>NAV Integration</description>
    <formula>SBQQ__QuoteLine__r.Total_Discount_incl_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount incl. Partner (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>