force-app/main/default/objects/OrderItem/fields/Yearly_Product_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Product_Order_Value__c</fullName>
    <formula>SBQQ__QuoteLine__r.Yearly_Order_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Product Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>